Final JWT auth
