# Backend/docs/swagger.yaml
@@ -1,7 +1,28 @@
 basePath: /
 definitions:
+  models.ErrorResponse:
+    properties:
+      error:
+        type: string
+    type: object
+  models.LoginRequest:
+    properties:
+      email:
+        type: string
+      password:
+        type: string
+      username:
+        type: string
+    type: object
+  models.TokenResponse:
+    properties:
+      token:
+        type: string
+    type: object
   models.User:
     properties:
+      createdAt:
+        type: string
       email:
         type: string
       level:
@@ -10,8 +31,17 @@ definitions:
         type: string
       password:
         type: string
+      updatedAt:
+        type: string
       username:
         type: string
+    type: object
+  models.UserResponse:
+    properties:
+      message:
+        type: string
+      user:
+        $ref: '#/definitions/models.User'
     type: object
 host: localhost:8080
 info:
@@ -20,21 +50,57 @@ info:
   title: Forge API
   version: "1.0"
 paths:
-  /swagger/index.json:
-    get:
+  /login:
+    post:
       consumes:
       - application/json
-      description: Get Swagger JSON
+      description: Authenticate user and return JWT token
+      parameters:
+      - description: Login data
+        in: body
+        name: loginData
+        required: true
+        schema:
+          $ref: '#/definitions/models.LoginRequest'
       produces:
       - application/json
       responses:
         "200":
           description: OK
           schema:
-            type: string
-      summary: Get Swagger JSON
+            $ref: '#/definitions/models.TokenResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/models.ErrorResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/models.ErrorResponse'
+      summary: Login user
       tags:
-      - Swagger
+      - auth
+  /profile:
+    get:
+      consumes:
+      - application/json
+      description: Get the profile information of the authenticated user
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Authorized
+          schema:
+            additionalProperties: true
+            type: object
+        "401":
+          description: Unauthorized
+          schema:
+            additionalProperties: true
+            type: object
+      summary: Retrieve user profile
+      tags:
+      - profile
   /user/register:
     post:
       consumes:
@@ -53,7 +119,15 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/models.User'
+            $ref: '#/definitions/models.UserResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/models.ErrorResponse'
+        "409":
+          description: Conflict
+          schema:
+            $ref: '#/definitions/models.ErrorResponse'
       summary: Registers a new user
       tags:
       - user
