# Backend/internal/models/requests.go
@@ -1,0 +1,7 @@
+package models
+
+type LoginRequest struct {
+	Username string `json:"username"`
+	Email    string `json:"email"`
+	Password string `json:"password"`
+}
